--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -148,10 +148,7 @@
 
 @media (min-width: @tablet-width) {
   .reviews::after {
-    height: 15px;
-
-    background-position: 27px bottom;
-    background-size: auto 15px;
+    display: none;
   }
 
   .reviews__wrapper {
@@ -165,6 +162,21 @@
     padding-top: 79px;
     padding-bottom: 96px;
     width: 668px;
+  }
+
+  .reviews__wrapper::after {
+    position: absolute;
+    bottom: 0;
+    left: -50px;
+    right: -50px;
+    content: "";
+
+    height: 15px;
+
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-repeat: repeat-x;
+    background-position: 27px bottom;
+    background-size: auto 15px;
   }
 
   .reviews__wrapper::before {
@@ -237,10 +249,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .reviews::after {
-    display: none;
-  }
-
   .reviews__wrapper {
     width: 1050px - 175px;
     padding-left: 175px;
@@ -253,16 +261,11 @@
   }
 
   .reviews__wrapper::after {
-    position: absolute;
-    bottom: 0;
     left: 0;
-    content: "";
+    right: 0;
 
-    width: 100%;
     height: 21px;
 
-    background-image: url("../img/bg-zigzag-line.svg");
-    background-repeat: repeat-x;
     background-position: 26px bottom;
     background-size: auto 21px;
   }
